--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
+    "@babel/core": "7.25.2",
+    "@babel/preset-env": "7.21.4",
+    "babel-loader": "9.1.2",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "8.38.0",
     "eslint-config-htmlacademy": "9.0.0",
@@ -21,5 +24,12 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^5.6.0"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all",
+    "not < 0.25%"
+  ]
 }
