--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
+    "@babel/core": "7.21.4",
     "@babel/preset-env": "7.21.4",
     "babel-loader": "9.1.2",
-    "copy-webpack-plugin": "^11.0.0",
+    "copy-webpack-plugin": "11.0.0",
     "eslint": "8.38.0",
     "eslint-config-htmlacademy": "9.0.0",
     "webpack": "5.79.0",
