--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node": "20"
   },
   "dependencies": {
-    "days": "1.1.1",
+    "dayjs": "^1.11.13",
+    "days": "^1.1.1",
     "html-webpack-plugin": "^5.6.0"
   },
   "browserslist": [
